fix: change cors setup